bk_ida/gccida/g1/record_set
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_set/src/alias.c:1379:7: error: expected expression
if (  struct set ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_set/src/alias.c:1386:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int16 *)set[1]; 
                 ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_set/src/alias.c:1450:34: error: use of undeclared identifier 'machine_mode'
*v12 = gen_rtx_fmt_e( ADDRESS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v11); 
                                 ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_set/src/obj/alias.o] Error 1
